<?xml version="1.0"?>
<package format="2">
  <name>bzl_modbus</name>
  <version>1.0.0</version>
  <description>bzl_modbus</description>

  <maintainer email="xubin59@countrygarden.com.cn">xubin</maintainer>
  <author email="xubin59@countrygarden.com.cn">xubin</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
